# codebase-llm

./: .gitignore  ARCHITECTURE.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh
code_assistant/: agent.py  config.py
code_assistant/prompts/: __init__.py  hyde_prompt.py  keyword_extraction_prompt.py  keyword_extraction_retry_prompt.py  main_agent_prompt.py
code_assistant/tools/: __init__.py  keyword_search.py  read_code.py  repo_discovery.py  repo_documentation.py  semantic_search.py
tests/: test_agent.py  test_embeddings.py  test_search_tools.py
